# hs-msgpack-rpc-conduit

./: .cirrus.yml  .gitignore  .hlint.yaml  .leaf.yml  .restyled.yaml  .travis.yml  BUILD.bazel  README.md  cabal.config  msgpack-rpc-conduit.cabal  network-msgpack-rpc.cabal  stack.yaml
.github/: settings.yml
.github/docker/: Dockerfile
src/Network/MessagePack/: Capabilities.hs  Client.hs  Interface.hs  Protocol.hs  Rpc.hs  Server.hs  Types.hs
src/Network/MessagePack/Client/: Basic.hs  Internal.hs
src/Network/MessagePack/Interface/: Internal.hs
src/Network/MessagePack/Internal/: TypeUtil.hs
src/Network/MessagePack/Server/: Basic.hs
src/Network/MessagePack/Types/: Client.hs  Error.hs  Result.hs  Server.hs  Spec.hs
test/Network/MessagePack/: ServerSpec.hs
