load("@io_tweag_rules_haskell//haskell:haskell.bzl", "haskell_library")
load("//tools/project:build_defs.bzl", "project")

project(
    license = "hs-msgpack",
)

haskell_library(
    name = "hs-msgpack-rpc",
    srcs = glob(["src/**/*.*hs"]),
    compiler_flags = [
        "-Wall",
        "-Werror",
        "-Wno-unused-imports",
    ],
    src_strip_prefix = "src",
    version = "0.0.5",
    visibility = ["//visibility:public"],
    deps = [
        "//hs-msgpack",
        "//hs-msgpack-types",
        "//third_party/haskell:base",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:mtl",
        "//third_party/haskell:text",
        "@haskell_MissingH//:MissingH",
        "@haskell_binary_conduit//:binary-conduit",
        "@haskell_conduit//:conduit",
        "@haskell_conduit_extra//:conduit-extra",
        "@haskell_data_default_class//:data-default-class",
        "@haskell_data_default_instances_base//:data-default-instances-base",
        "@haskell_exceptions//:exceptions",
        "@haskell_monad_control//:monad-control",
        "@haskell_network//:network",
    ],
)
